crates/wac-parser/tests/resolution/fail/unknown-package.wac
import foo: bar:baz/qux;